--- a/devenv.env
+++ b/devenv.env
@@ -1,6 +1,14 @@
-
 ENV=dev
 
-S3_BUCKET=bucket
-S3_KEY=key
-S3_SECRET=secret
+#WEBDRIVER
+GECKODRIVER_PATH=geckodriverpath
+
+
+S3_BUCKET=bucketname
+ACCESS_KEY=accesskey
+SECRET_ACCESS_KEY=secretkey
+REGION_NAME=regionname
+
+
+PROPERTY_TYPE=haz
+CITY=oroshaza
