--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -4,17 +4,15 @@ name: Deploy to AWS ECR
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [master]
+    branches: master
   pull_request:
-    branches: [master]
+    branches: master
 jobs:
-build:
-  name: Build Image
-  runs-on: ubuntu-latest
-# Steps represent a sequence of tasks that will be executed as part of the job
-  steps:
-      - name: Check out code
-        uses: actions/checkout@v2
+  build:
+    name: Build Image
+    runs-on: ubuntu-latest
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -24,14 +22,15 @@ build:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+        
       - name: Build, tag, and push image to Amazon ECR
-env:
-    ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-    ECR_REPOSITORY: ingcom_scrapy
-    IMAGE_TAG: 1
-    run: |
-      # Build a docker container and push it to ECR 
-      docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-      echo "Pushing image to ECR..."
-      docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-      echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ingcom_scrapy
+          IMAGE_TAG: 1
+          run: |
+            # Build a docker container and push it to ECR 
+            docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+            echo "Pushing image to ECR..."
+            docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+            echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
