--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -4,9 +4,9 @@ name: Deploy to AWS ECR
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: master
+    branches: [master]
   pull_request:
-    branches: master
+    branches: [master]
 jobs:
   build:
     name: Build Image
