--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ingcom_scrapy
-          IMAGE_TAG: 1
+          ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+          IMAGE_TAG: ${{ github.sha }}
           run: |
             # Build a docker container and push it to ECR 
             docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
