--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -38,4 +38,6 @@ jobs:
         echo "Pushing image to ECR..."
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-        
+        permissions:
+          id-token: write
+          contents: write
