--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -40,4 +40,6 @@ jobs:
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
         permissions:
           id-token: write
-          contents: write
+          contents: read
+
+  
