--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -23,15 +23,17 @@ jobs:
         aws-region: eu-central-1
 
     - name: Login to Amazon ECR
-      id: login-ecr
+      id: login-ecr-private
       uses: aws-actions/amazon-ecr-login@v1
+      with:
+        registry-type: private
 
     - name: Build, tag, and push the image to Amazon ECR
       id: build-image
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ingatlancom
-        IMAGE_TAG: 1.0
+        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        REPOSITORY: ingatlancom
+        IMAGE_TAG: ingatlancom_scraper
       run: |
         # Build a docker container and push it to ECR 
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
