--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -25,14 +25,11 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
-      with:
-        registry-type: private
 
     - name: Build, tag, and push the image to Amazon ECR
-      id: build-image
       env:
-        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        REPOSITORY: ingatlancom
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ingatlancom
         IMAGE_TAG: ingatlancom_scraper
       run: |
         # Build a docker container and push it to ECR 
