--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Configure AWS credentials
       uses: elgohr/ecr-login-action@v2
       with:
-        access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         region: eu-central-1
 
