--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Configure AWS credentials
-      uses: elgohr/ecr-login-action@v2
+      uses: aws-actions/configure-aws-credentials@v1
       with:
         access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
         secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
