--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -27,9 +27,9 @@ jobs:
 
     - name: Build, tag, and push the image to Amazon ECR
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: ingatlancom
-        IMAGE_TAG: ingatlancom_scraper
+        REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        REPOSITORY: ingatlancom
+        IMAGE_TAG: ${{ github.sha }}
       run: |
         # Build a docker container and push it to ECR 
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
