--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,7 +28,7 @@ name: Deploy to Amazon ECR
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ master ]
 
 permissions:
   contents: read
