--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -58,7 +58,7 @@ jobs:
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        IMAGE_TAG: ${{ github.sha }}
+        IMAGE_TAG: latest
         ECR_REPOSITORY: ingatlancom
       run: |
         # Build a docker container and
