migrate to ECR public repo

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -57,7 +57,7 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REGISTRY: public.ecr.aws/businesswatcher
         IMAGE_TAG: latest
         ECR_REPOSITORY: ingatlancom
       run: |
