public migration vol. 2.

--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -49,6 +49,7 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
+        registry-type: public
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -57,9 +58,10 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        REGISTRY: ${{ steps.login-ecr-public.outputs.registry }}
+        REGISTRY_ALIAS: my-ecr-public-registry-alias
+        REPOSITORY: ingatlancom
         IMAGE_TAG: latest
-        ECR_REPOSITORY: ingatlancom
       run: |
         # Build a docker container and
         # push it to ECR so that it can
