--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 attrs==21.2.0
 Automat==20.2.0
+beautifulsoup4==4.11.1
 boto3==1.21.46
 botocore==1.24.46
+bs4==0.0.1
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
@@ -11,6 +13,8 @@ constantly==15.1.0
 crayons==0.4.0
 cryptography==3.4.7
 cssselect==1.1.0
+fake-useragent==0.1.14
+Faker==15.3.1
 geckodriver-autoinstaller==0.1.0
 greenlet==1.1.2
 h2==3.2.0
@@ -42,16 +46,21 @@ requests==2.26.0
 s3transfer==0.5.2
 Scrapy==2.4.0
 scrapy-deltafetch==2.0.1
+scrapy-fake-useragent==1.4.4
 scrapy-selenium==0.0.7
 scrapy-selenium-middleware==0.0.5
+scrapy-user-agents==0.1.1
 selenium==3.141.0
 selenium-wire==2.1.1
 service-identity==21.1.0
 six==1.16.0
+soupsieve==2.3.2.post1
 SQLAlchemy==1.4.25
 Twisted==21.7.0
 typing-extensions==3.10.0.0
+ua-parser==0.16.1
 urllib3==1.26.6
+user-agents==2.2.0
 w3lib==1.22.0
 webdriver-manager==3.4.2
 zope.interface==5.4.0
